# TP-POO

./: CMakeLists.txt  README.md  UI.cpp  UI.h  buffer.cpp  buffer.h  caravana.cpp  caravana.h  caravanasTipos.cpp  caravanasTipos.h  combate.cpp  combate.h  grelha.cpp  grelha.h  item.cpp  item.h  itensDerivados.cpp  itensDerivados.h  jogador.cpp  jogador.h  main.cpp  utils.cpp  utils.h
